@@ -71,6 +71,11 @@ AC_CHECK_LIB([intl], [dcgettext])
 AC_CHECK_LIB([iberty], [xmalloc])
 AC_CHECK_LIB([bfd], [bfd_init], , [ac_found_bfd=no])
 AC_CHECK_LIB([usb], [usb_get_string_simple])
+AC_CHECK_LIB([usb], [libusb20_dev_open], [have_libusb_2_0=yes])
+if test x$have_libusb_2_0 = xyes; then
+   AC_DEFINE([HAVE_LIBUSB_2_0], [], [Define if USB support is enabled via FreeBSD's libusb20 API])
+   AC_CHECK_HEADERS([libusb20.h])
+fi
 
 # Checks for header files.
 AC_HEADER_STDC
